--- a/po/ca.po
+++ b/po/ca.po
@@ -23,7 +23,7 @@ msgstr ""
 #. comments
 #: ../plugins/actions/about/about.cc:76
 #, fuzzy
-msgid "a tool for subtitles edition"
+msgid "A tool for editing subtitles"
 msgstr "Editor d'estils"
 
 #. translator-credits
@@ -373,7 +373,7 @@ msgid "_Combine"
 msgstr ""
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:44
-msgid "Merge the selected subtitles"
+msgid "Merge selected subtitles"
 msgstr ""
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:135
@@ -653,11 +653,6 @@ msgstr "Document nou"
 msgid "_Duplicate"
 msgstr ""
 
-#: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:44
-#, fuzzy
-msgid "Duplicate the selected subtitles"
-msgstr "Desa com a subtítols"
-
 #: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:99
 #, fuzzy
 msgid "Duplicate selected subtitles"
@@ -668,7 +663,7 @@ msgid "_Edit Cell"
 msgstr ""
 
 #: ../plugins/actions/editcell/editcell.cc:44
-msgid "Start the editing of the focused cell"
+msgid "Start editing the focused cell"
 msgstr ""
 
 #: ../plugins/actions/editcell/editcell.cc:49
@@ -676,7 +671,7 @@ msgid "Edit _Next Cell"
 msgstr ""
 
 #: ../plugins/actions/editcell/editcell.cc:50
-msgid "Start the editing of the next cell"
+msgid "Start editing the next cell"
 msgstr ""
 
 #: ../plugins/actions/errorchecking/dialog-error-checking-preferences.ui.h:1
@@ -813,7 +808,7 @@ msgstr "Comprova l'ortografia"
 
 #: ../plugins/actions/errorchecking/errorcheckingplugin.cc:692
 #, fuzzy
-msgid "Launch the error checking."
+msgid "Launch error checking."
 msgstr "Comprova l'ortografia"
 
 #: ../plugins/actions/errorchecking/maxcharactersperline.h:29
@@ -1200,7 +1195,7 @@ msgstr "_Subtítols"
 
 #: ../plugins/actions/findbytime/findbytime.cc:57
 #: ../plugins/actions/findbytime/findbytime.se-plugin.in.h:2
-msgid "Finds the subtitle nearest to the current player position."
+msgid "Finds the subtitle nearest to the current player position"
 msgstr ""
 
 #: ../plugins/actions/findbytime/findbytime.cc:114
@@ -1251,7 +1246,7 @@ msgid "Insert _Before"
 msgstr "Insereix abans"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:45
-msgid "Insert blank subtitle before the selected subtitle"
+msgid "Insert a blank subtitle before the first selected subtitle"
 msgstr ""
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:51
@@ -1260,7 +1255,7 @@ msgid "Insert _After"
 msgstr "Insereix després"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:52
-msgid "Insert blank subtitle after the selected subtitle"
+msgid "Insert a blank subtitle after the first selected subtitle"
 msgstr ""
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:117
@@ -1276,7 +1271,7 @@ msgstr ""
 
 #: ../plugins/actions/italicize/italicize.cc:45
 #, fuzzy
-msgid "Italicize the selected subtitles text"
+msgid "Italicize the text of the selected subtitles"
 msgstr "Desa com a subtítols"
 
 #: ../plugins/actions/italicize/italicize.cc:110
@@ -1338,7 +1333,7 @@ msgstr "Insereix abans"
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:60
 #, fuzzy
-msgid "Save keyframes to the file"
+msgid "Save keyframes to a file"
 msgstr "Insereix abans"
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:66
@@ -1356,7 +1351,7 @@ msgstr ""
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:79
 #, fuzzy
-msgid "Close the keyframes"
+msgid "Close Keyframes"
 msgstr "S'ha produït un error en desar el document:"
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:79
@@ -1964,7 +1959,7 @@ msgstr ""
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:44
 #, fuzzy
-msgid "Delete the selected subtitles"
+msgid "Delete selected subtitles"
 msgstr "Desa com a subtítols"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:104
@@ -2303,7 +2298,7 @@ msgstr "Comprova l'ortografia"
 
 #: ../plugins/actions/spellchecking/spellchecking.cc:642
 #, fuzzy
-msgid "Launch the spell checking"
+msgid "Launch spell-checking"
 msgstr "Comprova l'ortografia"
 
 #: ../plugins/actions/splitdocument/dialog-split-document.ui.h:1
@@ -2317,7 +2312,7 @@ msgid "The beginning for the new document:"
 msgstr ""
 
 #: ../plugins/actions/splitdocument/splitdocument.cc:46
-msgid "You can't use <i>split</i> with this document."
+msgid "You can't use the <i>split</i> action with this document."
 msgstr ""
 
 #. Remove subtitles used by the new one
@@ -2342,7 +2337,7 @@ msgstr "_Fitxer"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:45
 #, fuzzy
-msgid "Split the selected subtitles"
+msgid "Split selected subtitles"
 msgstr "Desa com a subtítols"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:94
@@ -2551,7 +2546,7 @@ msgstr ""
 
 #: ../plugins/actions/template/template.cc:110
 #, fuzzy
-msgid "Save the current document as template."
+msgid "Save the current document as template"
 msgstr "S'ha produït un error en desar el document:"
 
 #: ../plugins/actions/textcorrection/assistant-text-correction.ui.h:1
@@ -2687,7 +2682,7 @@ msgstr ""
 
 #: ../plugins/actions/timemodemanagement/timemodemanagement.cc:46
 #, fuzzy
-msgid "_Times"
+msgid "_Timecodes"
 msgstr "<b>Aparença</b>"
 
 #: ../plugins/actions/timemodemanagement/timemodemanagement.cc:53
@@ -2727,7 +2722,7 @@ msgid "Timing From Player"
 msgstr "capa"
 
 #: ../plugins/actions/timingfromplayer/timingfromplayer.cc:76
-msgid "Use the current player position to set subtitle time"
+msgid "Use the current player position to set subtitle timecodes"
 msgstr ""
 
 #: ../plugins/actions/timingfromplayer/timingfromplayer.cc:80
@@ -2847,13 +2842,13 @@ msgstr "_Video"
 
 #. _("_Open Media"),
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:49
-msgid "Open a multimedia file"
+msgid "Open an audio file or a video file"
 msgstr ""
 
 #. _("_Close Media"),
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:56
 #, fuzzy
-msgid "Close a multimedia file"
+msgid "Close an audio file or a video file"
 msgstr "S'ha produït un error en desar el document:"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:69
@@ -2861,7 +2856,7 @@ msgid "_Play / Pause"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:70
-msgid "Play or make a pause"
+msgid "Play or pause audio or video"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:76
@@ -2877,7 +2872,7 @@ msgstr "Canvia els FPS"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:81
 #, fuzzy
-msgid "Frame skip backwards"
+msgid "Skip backwards by a frame"
 msgstr "Mou els subtítols"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:88
@@ -2937,7 +2932,7 @@ msgid "Skip _Forward"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:134
-msgid "Frame skip forward"
+msgid "Skip forward by a frame"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:142
@@ -2969,7 +2964,7 @@ msgstr ""
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:185
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:190
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:195
-msgid "Define the playback rate"
+msgid "Set the playback rate"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:184
@@ -2990,7 +2985,7 @@ msgid "_Seek To Selection"
 msgstr "Establiu el temps"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:202
-msgid "Seek to the first selected subtitle"
+msgid "Seek to start of the first selected subtitle"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:208
@@ -3036,7 +3031,7 @@ msgid "Play _Next Subtitle"
 msgstr "Desa els subtítols"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:241
-msgid "Play next subtitle from the first selected subtitle"
+msgid "Play the subtitle that is next to the first selected subtitle"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:247
@@ -3087,7 +3082,7 @@ msgid "Audio Track"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:281
-msgid "Choice of an audio track"
+msgid "Choose the audio track"
 msgstr ""
 
 #. A default track "Auto"
@@ -3135,7 +3130,7 @@ msgstr ""
 
 #: ../plugins/actions/viewmanager/viewmanager.cc:338
 #, fuzzy
-msgid "Manage the views"
+msgid "Manage views"
 msgstr "Gestiona els estils"
 
 #: ../plugins/actions/waveformmanagement/waveformgenerator.cc:32
@@ -3170,7 +3165,7 @@ msgid "_Generate Waveform From Video"
 msgstr "Insereix abans"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:64
-msgid "Generate the waveform from the current video file"
+msgid "Generate a waveform from the current video file"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:70
@@ -3180,7 +3175,7 @@ msgstr "Insereix abans"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:71
 #, fuzzy
-msgid "Generate an dummy waveform (sine)"
+msgid "Generate a dummy waveform (a sinusoidal wave)"
 msgstr "Insereix abans"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:76
@@ -3190,7 +3185,7 @@ msgstr "Insereix abans"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:76
 #, fuzzy
-msgid "Save waveform to file"
+msgid "Save the waveform to a file"
 msgstr "Insereix abans"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:82
@@ -3200,7 +3195,7 @@ msgstr "Insereix abans"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:82
 #, fuzzy
-msgid "Close waveform"
+msgid "Close the waveform"
 msgstr "Insereix abans"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:88
@@ -3225,11 +3220,11 @@ msgstr "Ig_nora-ho tot"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:109
 #, fuzzy
-msgid "_Center With Selected Subtitle"
+msgid "_Center Selected Subtitle"
 msgstr "Desa com a subtítols"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:119
-msgid "Scrolling With _Player"
+msgid "Scrolling With _Video"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:131
@@ -3519,7 +3514,7 @@ msgstr ""
 
 #: ../src/gui/application.cc:296
 #, fuzzy
-msgid "Times"
+msgid "Timecodes"
 msgstr "<b>Aparença</b>"
 
 #: ../src/gui/application.cc:296
@@ -4160,7 +4155,7 @@ msgid "About"
 msgstr "Qu_ant a"
 
 #: ../plugins/actions/about/about.se-plugin.in.h:2
-msgid "Displays the application's information."
+msgid "Displays information about the application."
 msgstr ""
 
 #: ../plugins/actions/adjusttime/adjusttime.se-plugin.in.h:1
