--- a/po/cs.po
+++ b/po/cs.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #. comments
 #: ../plugins/actions/about/about.cc:76
-msgid "a tool for subtitles edition"
+msgid "A tool for editing subtitles"
 msgstr "nástroj pro editaci titulků"
 
 #. translator-credits
@@ -372,7 +372,7 @@ msgid "_Combine"
 msgstr "S_loučit"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:44
-msgid "Merge the selected subtitles"
+msgid "Merge selected subtitles"
 msgstr "Sloučit vybrané titulky"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:135
@@ -637,9 +637,6 @@ msgstr "Rozdě_lit dokument"
 msgid "_Duplicate"
 msgstr "Zdvo_jit"
 
-#: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:44
-msgid "Duplicate the selected subtitles"
-msgstr "Zdvojit vybrané titulky"
 
 #: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:99
 msgid "Duplicate selected subtitles"
@@ -650,7 +647,7 @@ msgid "_Edit Cell"
 msgstr "_Upravit buňku"
 
 #: ../plugins/actions/editcell/editcell.cc:44
-msgid "Start the editing of the focused cell"
+msgid "Start editing the focused cell"
 msgstr "Začít upravovat aktivní buňku"
 
 #: ../plugins/actions/editcell/editcell.cc:49
@@ -658,7 +655,7 @@ msgid "Edit _Next Cell"
 msgstr "Upravit _následující buňku"
 
 #: ../plugins/actions/editcell/editcell.cc:50
-msgid "Start the editing of the next cell"
+msgid "Start editing the next cell"
 msgstr "Začít upravovat následující buňku"
 
 #: ../plugins/actions/errorchecking/dialog-error-checking-preferences.ui.h:1
@@ -789,7 +786,7 @@ msgid "_Error Checking"
 msgstr "_Kontrola chyb"
 
 #: ../plugins/actions/errorchecking/errorcheckingplugin.cc:692
-msgid "Launch the error checking."
+msgid "Launch error checking."
 msgstr "Spustí kontrolu chyb"
 
 #: ../plugins/actions/errorchecking/maxcharactersperline.h:29
@@ -1188,7 +1185,7 @@ msgstr "Přidat titulek"
 #: ../plugins/actions/findbytime/findbytime.cc:57
 #: ../plugins/actions/findbytime/findbytime.se-plugin.in.h:2
 #, fuzzy
-msgid "Finds the subtitle nearest to the current player position."
+msgid "Finds the subtitle nearest to the current player position"
 msgstr "Kdy se titulek objeví na obrazovce."
 
 #: ../plugins/actions/findbytime/findbytime.cc:114
@@ -1240,7 +1237,7 @@ msgid "Insert _Before"
 msgstr "Vložit _před"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:45
-msgid "Insert blank subtitle before the selected subtitle"
+msgid "Insert a blank subtitle before the first selected subtitle"
 msgstr "Vložit prázdný titulek před vybraný"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:51
@@ -1248,7 +1245,7 @@ msgid "Insert _After"
 msgstr "Vložit z_a"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:52
-msgid "Insert blank subtitle after the selected subtitle"
+msgid "Insert a blank subtitle after the first selected subtitle"
 msgstr "Vložit prázdný titulek za vybraný"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:117
@@ -1262,7 +1259,7 @@ msgid "_Italic"
 msgstr "Kurz_iva"
 
 #: ../plugins/actions/italicize/italicize.cc:45
-msgid "Italicize the selected subtitles text"
+msgid "Italicize the text of the selected subtitles"
 msgstr "Převést vybraný text titulku na kurzivu"
 
 #: ../plugins/actions/italicize/italicize.cc:110
@@ -1317,7 +1314,7 @@ msgid "Save Keyframes"
 msgstr "Uložit klíčové snímky"
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:60
-msgid "Save keyframes to the file"
+msgid "Save keyframes to a file"
 msgstr "Uložit klíčové snímky do souboru"
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:66
@@ -1335,7 +1332,7 @@ msgid "Generate Keyframes From Video (Using Frame)"
 msgstr "_Vytvořit klíčové snímky z videa"
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:79
-msgid "Close the keyframes"
+msgid "Close Keyframes"
 msgstr "Zavřít klíčové snímky"
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:79
@@ -1917,7 +1914,7 @@ msgid "OpenGL"
 msgstr "OpenGL"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:44
-msgid "Delete the selected subtitles"
+msgid "Delete selected subtitles"
 msgstr "Smazat vybrané titulky"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:104
@@ -2228,7 +2225,7 @@ msgid "_Spell Check"
 msgstr "_Kontrola pravopisu"
 
 #: ../plugins/actions/spellchecking/spellchecking.cc:642
-msgid "Launch the spell checking"
+msgid "Launch spell-checking"
 msgstr "Spustí kontrolu pravopisu"
 
 #: ../plugins/actions/splitdocument/dialog-split-document.ui.h:1
@@ -2241,7 +2238,7 @@ msgid "The beginning for the new document:"
 msgstr "Začátek nového dokumentu:"
 
 #: ../plugins/actions/splitdocument/splitdocument.cc:46
-msgid "You can't use <i>split</i> with this document."
+msgid "You can't use the <i>split</i> action with this document."
 msgstr "Tento dokument nelze <i>rozdělit</i>."
 
 #. Remove subtitles used by the new one
@@ -2262,7 +2259,7 @@ msgid "_Split"
 msgstr "_Rozdělit"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:45
-msgid "Split the selected subtitles"
+msgid "Split selected subtitles"
 msgstr "Rozdělit vybrané titulky"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:94
@@ -2467,7 +2464,7 @@ msgstr ""
 
 #: ../plugins/actions/template/template.cc:110
 #, fuzzy
-msgid "Save the current document as template."
+msgid "Save the current document as template"
 msgstr "Rozdělí aktuální dokument na dva."
 
 #: ../plugins/actions/textcorrection/assistant-text-correction.ui.h:1
@@ -2599,7 +2596,7 @@ msgid "Text _Correction"
 msgstr "_Korekce textu"
 
 #: ../plugins/actions/timemodemanagement/timemodemanagement.cc:46
-msgid "_Times"
+msgid "_Timecodes"
 msgstr "Č_asy"
 
 #: ../plugins/actions/timemodemanagement/timemodemanagement.cc:53
@@ -2637,7 +2634,7 @@ msgid "Timing From Player"
 msgstr "Časování dle přehrávače"
 
 #: ../plugins/actions/timingfromplayer/timingfromplayer.cc:76
-msgid "Use the current player position to set subtitle time"
+msgid "Use the current player position to set subtitle timecodes"
 msgstr "Použije aktuální pozici v přehrávači pro nastavení času titulku"
 
 #: ../plugins/actions/timingfromplayer/timingfromplayer.cc:80
@@ -2756,12 +2753,12 @@ msgstr "V_ideo"
 
 #. _("_Open Media"),
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:49
-msgid "Open a multimedia file"
+msgid "Open an audio file or a video file"
 msgstr "Otevřít multimediální soubor"
 
 #. _("_Close Media"),
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:56
-msgid "Close a multimedia file"
+msgid "Close an audio file or a video file"
 msgstr "Zavřít multimediální soubor"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:69
@@ -2769,7 +2766,7 @@ msgid "_Play / Pause"
 msgstr "Přehrávání / Pa_uza"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:70
-msgid "Play or make a pause"
+msgid "Play or pause audio or video"
 msgstr "Přehrávání nebo pauza"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:76
@@ -2784,7 +2781,7 @@ msgstr "Snímky"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:81
 #, fuzzy
-msgid "Frame skip backwards"
+msgid "Skip backwards by a frame"
 msgstr "Krátký skok zpět"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:88
@@ -2839,7 +2836,7 @@ msgstr "Skok vpře_d"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:134
 #, fuzzy
-msgid "Frame skip forward"
+msgid "Skip forward by a frame"
 msgstr "Krátký skok vpřed"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:142
@@ -2872,7 +2869,7 @@ msgstr "Rychlost"
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:185
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:190
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:195
-msgid "Define the playback rate"
+msgid "Set the playback rate"
 msgstr "Určit rychlost přehrávání"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:184
@@ -2892,7 +2889,7 @@ msgid "_Seek To Selection"
 msgstr "_Skok k výběru"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:202
-msgid "Seek to the first selected subtitle"
+msgid "Seek to start of the first selected subtitle"
 msgstr "Přejít na první zvolený titulek"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:208
@@ -2934,7 +2931,7 @@ msgid "Play _Next Subtitle"
 msgstr "Přehrát _následující titulek"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:241
-msgid "Play next subtitle from the first selected subtitle"
+msgid "Play the subtitle that is next to the first selected subtitle"
 msgstr "Přehrát následující titulek od prvního vybraného"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:247
@@ -2982,7 +2979,7 @@ msgid "Audio Track"
 msgstr "Zvuková stopa"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:281
-msgid "Choice of an audio track"
+msgid "Choose the audio track"
 msgstr "Výběr zvukové stopy"
 
 #. A default track "Auto"
@@ -3030,7 +3027,7 @@ msgid "View _Manager"
 msgstr "_Správce zobrazení"
 
 #: ../plugins/actions/viewmanager/viewmanager.cc:338
-msgid "Manage the views"
+msgid "Manage views"
 msgstr "Spravovat zobrazení"
 
 #: ../plugins/actions/waveformmanagement/waveformgenerator.cc:32
@@ -3062,7 +3059,7 @@ msgid "_Generate Waveform From Video"
 msgstr "_Vytvořit vlnovku z videa"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:64
-msgid "Generate the waveform from the current video file"
+msgid "Generate a waveform from the current video file"
 msgstr "Vytvořit vlnovku z aktuálního video souboru"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:70
@@ -3070,7 +3067,7 @@ msgid "_Generate Dummy Waveform"
 msgstr "_Vytvořit prázdnou vlnovku"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:71
-msgid "Generate an dummy waveform (sine)"
+msgid "Generate a dummy waveform (a sinusoidal wave)"
 msgstr "Vytvořit prázdnou vlnovku (sinusoidu)"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:76
@@ -3079,7 +3076,7 @@ msgstr "_Uložit vlnovku"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:76
 #, fuzzy
-msgid "Save waveform to file"
+msgid "Save the waveform to a file"
 msgstr "Uložit vlnovku do souboru"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:82
@@ -3089,7 +3086,7 @@ msgstr "_Uložit vlnovku"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:82
 #, fuzzy
-msgid "Close waveform"
+msgid "Close the waveform"
 msgstr "Uložit vlnovku"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:88
@@ -3109,11 +3106,11 @@ msgid "Zoom _All"
 msgstr "Ukázat _vše"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:109
-msgid "_Center With Selected Subtitle"
+msgid "_Center Selected Subtitle"
 msgstr "Vystředit _na vybraný titulek"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:119
-msgid "Scrolling With _Player"
+msgid "Scrolling With _Video"
 msgstr "Rolování s _přehrávačem"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:131
@@ -3403,7 +3400,7 @@ msgid "Please check your GStreamer installation."
 msgstr "Prosím, zkontrolujte vaši instalaci GStreameru."
 
 #: ../src/gui/application.cc:296
-msgid "Times"
+msgid "Timecodes"
 msgstr "Časy"
 
 #: ../src/gui/application.cc:296
@@ -4000,7 +3997,7 @@ msgid "About"
 msgstr "O aplikaci"
 
 #: ../plugins/actions/about/about.se-plugin.in.h:2
-msgid "Displays the application's information."
+msgid "Displays information about the application."
 msgstr "Zobrazí informace o aplikaci."
 
 #: ../plugins/actions/adjusttime/adjusttime.se-plugin.in.h:1
