--- a/po/eo.po
+++ b/po/eo.po
@@ -375,7 +375,7 @@ msgid "_Combine"
 msgstr "_Kombini"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:44
-msgid "Merge the selected subtitles"
+msgid "Merge selected subtitles"
 msgstr "Kunfandi la elektitajn subtekstojn"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:135
@@ -639,10 +639,6 @@ msgstr "Di_vidi dokumenton"
 msgid "_Duplicate"
 msgstr "_Duobigi"
 
-#: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:44
-msgid "Duplicate the selected subtitles"
-msgstr "Duobligi la elektitajn subtekstojn"
-
 #: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:99
 msgid "Duplicate selected subtitles"
 msgstr "Duobligi elektitajn subtekstojn"
@@ -652,7 +648,7 @@ msgid "_Edit Cell"
 msgstr "_Redakti ĉelon"
 
 #: ../plugins/actions/editcell/editcell.cc:44
-msgid "Start the editing of the focused cell"
+msgid "Start editing the focused cell"
 msgstr "Ekredakti la enfokusigitan ĉelon"
 
 #: ../plugins/actions/editcell/editcell.cc:49
@@ -660,7 +656,7 @@ msgid "Edit _Next Cell"
 msgstr "Redakti _sekvan ĉelon"
 
 #: ../plugins/actions/editcell/editcell.cc:50
-msgid "Start the editing of the next cell"
+msgid "Start editing the next cell"
 msgstr "Ekredakti la sekvan ĉelon"
 
 #: ../plugins/actions/errorchecking/dialog-error-checking-preferences.ui.h:1
@@ -1246,7 +1242,7 @@ msgid "Insert _Before"
 msgstr "Enmeti _antaŭe"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:45
-msgid "Insert blank subtitle before the selected subtitle"
+msgid "Insert a blank subtitle before the first selected subtitle"
 msgstr "Enmeti malplenan subtekston antaŭ la elektita subteksto"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:51
@@ -1254,7 +1250,7 @@ msgid "Insert _After"
 msgstr "Enmeti _poste"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:52
-msgid "Insert blank subtitle after the selected subtitle"
+msgid "Insert a blank subtitle after the first selected subtitle"
 msgstr "Enmeti malplenan subtekston post la elektita subteksto"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:117
@@ -1268,7 +1264,7 @@ msgid "_Italic"
 msgstr "Kurs_iva"
 
 #: ../plugins/actions/italicize/italicize.cc:45
-msgid "Italicize the selected subtitles text"
+msgid "Italicize the text of the selected subtitles"
 msgstr "Kursivigas la elektitan subtekstotekston"
 
 #: ../plugins/actions/italicize/italicize.cc:110
@@ -1922,7 +1918,7 @@ msgid "OpenGL"
 msgstr "OpenGL"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:44
-msgid "Delete the selected subtitles"
+msgid "Delete selected subtitles"
 msgstr "Forviŝi la elektitajn subtekstojn"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:104
@@ -2265,7 +2261,7 @@ msgid "_Split"
 msgstr "_Dividi"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:45
-msgid "Split the selected subtitles"
+msgid "Split selected subtitles"
 msgstr "Dividas la elektitajn subtekstojn"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:94
