--- a/po/eu.po
+++ b/po/eu.po
@@ -356,7 +356,7 @@ msgid "_Combine"
 msgstr "_Konbinatu"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:44
-msgid "Merge the selected subtitles"
+msgid "Merge selected subtitles"
 msgstr "Batu hautatutako azpitituluak"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:135
@@ -616,10 +616,6 @@ msgstr "Dokumentu _berria"
 msgid "_Duplicate"
 msgstr "_Bikoiztu"
 
-#: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:44
-msgid "Duplicate the selected subtitles"
-msgstr "Bikoiztu hautatutako azpitituluak"
-
 #: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:99
 msgid "Duplicate selected subtitles"
 msgstr "Bikoiztu hautatutako azpitituluak"
@@ -629,7 +625,7 @@ msgid "_Edit Cell"
 msgstr "_Editatu gelaxka"
 
 #: ../plugins/actions/editcell/editcell.cc:44
-msgid "Start the editing of the focused cell"
+msgid "Start editing the focused cell"
 msgstr "Hasi fokuratutako gelaxkaren edizioa"
 
 #: ../plugins/actions/editcell/editcell.cc:49
@@ -637,7 +633,7 @@ msgid "Edit _Next Cell"
 msgstr "Editatu _hurrengo gelaxka"
 
 #: ../plugins/actions/editcell/editcell.cc:50
-msgid "Start the editing of the next cell"
+msgid "Start editing the next cell"
 msgstr "Hasi hurrengo gelaxkaren edizioa"
 
 #: ../plugins/actions/errorchecking/dialog-error-checking-preferences.ui.h:1
@@ -1211,7 +1207,7 @@ msgid "Insert _Before"
 msgstr "Txertatu _aurrean"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:45
-msgid "Insert blank subtitle before the selected subtitle"
+msgid "Insert a blank subtitle before the first selected subtitle"
 msgstr "Txertatu azpititulu huts bat hautatutako azpitituluaren aurretik"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:51
@@ -1219,7 +1215,7 @@ msgid "Insert _After"
 msgstr "Txertatu _ondoren"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:52
-msgid "Insert blank subtitle after the selected subtitle"
+msgid "Insert a blank subtitle after the first selected subtitle"
 msgstr "Txertatu azpititulu huts bat hautatutako azpitituluaren ondoren"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:117
@@ -1233,7 +1229,7 @@ msgid "_Italic"
 msgstr "_etzana"
 
 #: ../plugins/actions/italicize/italicize.cc:45
-msgid "Italicize the selected subtitles text"
+msgid "Italicize the text of the selected subtitles"
 msgstr "Etzan hautatutako azpitituluen testua"
 
 #: ../plugins/actions/italicize/italicize.cc:110
@@ -1897,7 +1893,7 @@ msgid "OpenGL"
 msgstr "OpenGL"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:44
-msgid "Delete the selected subtitles"
+msgid "Delete selected subtitles"
 msgstr "Ezabatu hautatutako azpitituluak"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:104
@@ -2238,7 +2234,7 @@ msgid "_Split"
 msgstr "_Zatitu"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:45
-msgid "Split the selected subtitles"
+msgid "Split selected subtitles"
 msgstr "Zatitu hautatutako azpitituluak"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:94
