--- a/po/it.po
+++ b/po/it.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #. comments
 #: ../plugins/actions/about/about.cc:76
-msgid "a tool for subtitles edition"
+msgid "A tool for editing subtitles"
 msgstr "un programma per editare i sottotitoli"
 
 #. translator-credits
@@ -374,7 +374,7 @@ msgid "_Combine"
 msgstr ""
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:44
-msgid "Merge the selected subtitles"
+msgid "Merge selected subtitles"
 msgstr "Unisci sottotitoli selezionati"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:135
@@ -654,11 +654,6 @@ msgstr "Dividi documento"
 msgid "_Duplicate"
 msgstr ""
 
-#: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:44
-#, fuzzy
-msgid "Duplicate the selected subtitles"
-msgstr "Dividi sottotitoli selezionati"
-
 #: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:99
 #, fuzzy
 msgid "Duplicate selected subtitles"
@@ -670,7 +665,7 @@ msgid "_Edit Cell"
 msgstr "_Modifica"
 
 #: ../plugins/actions/editcell/editcell.cc:44
-msgid "Start the editing of the focused cell"
+msgid "Start editing the focused cell"
 msgstr ""
 
 #: ../plugins/actions/editcell/editcell.cc:49
@@ -678,7 +673,7 @@ msgid "Edit _Next Cell"
 msgstr ""
 
 #: ../plugins/actions/editcell/editcell.cc:50
-msgid "Start the editing of the next cell"
+msgid "Start editing the next cell"
 msgstr ""
 
 #: ../plugins/actions/errorchecking/dialog-error-checking-preferences.ui.h:1
@@ -815,7 +810,7 @@ msgstr "Controllo ortografico"
 
 #: ../plugins/actions/errorchecking/errorcheckingplugin.cc:692
 #, fuzzy
-msgid "Launch the error checking."
+msgid "Launch error checking."
 msgstr "Avvia il controllo degli errori"
 
 #: ../plugins/actions/errorchecking/maxcharactersperline.h:29
@@ -1238,7 +1233,7 @@ msgstr "Muovi sottotitoli"
 
 #: ../plugins/actions/findbytime/findbytime.cc:57
 #: ../plugins/actions/findbytime/findbytime.se-plugin.in.h:2
-msgid "Finds the subtitle nearest to the current player position."
+msgid "Finds the subtitle nearest to the current player position"
 msgstr ""
 
 #: ../plugins/actions/findbytime/findbytime.cc:114
@@ -1289,7 +1284,7 @@ msgid "Insert _Before"
 msgstr "Aggiungi Prima"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:45
-msgid "Insert blank subtitle before the selected subtitle"
+msgid "Insert a blank subtitle before the first selected subtitle"
 msgstr "Aggiungi nuovo sottotitolo prima"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:51
@@ -1298,7 +1293,7 @@ msgid "Insert _After"
 msgstr "Aggiungi dopo"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:52
-msgid "Insert blank subtitle after the selected subtitle"
+msgid "Insert a blank subtitle after the first selected subtitle"
 msgstr "Aggiungi nuovo sottotitolo dopo"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:117
@@ -1315,7 +1310,7 @@ msgstr "Baltico"
 
 #: ../plugins/actions/italicize/italicize.cc:45
 #, fuzzy
-msgid "Italicize the selected subtitles text"
+msgid "Italicize the text of the selected subtitles"
 msgstr "Dividi sottotitoli selezionati"
 
 #: ../plugins/actions/italicize/italicize.cc:110
@@ -1377,7 +1372,7 @@ msgstr "Salva Waveform"
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:60
 #, fuzzy
-msgid "Save keyframes to the file"
+msgid "Save keyframes to a file"
 msgstr "Salva Waveform"
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:66
@@ -1395,7 +1390,7 @@ msgstr ""
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:79
 #, fuzzy
-msgid "Close the keyframes"
+msgid "Close Keyframes"
 msgstr "Salva il file corrente"
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:79
@@ -1993,7 +1988,7 @@ msgid "OpenGL"
 msgstr "OpenGL "
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:44
-msgid "Delete the selected subtitles"
+msgid "Delete selected subtitles"
 msgstr "Cancella selezione"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:104
@@ -2325,7 +2320,7 @@ msgid "_Spell Check"
 msgstr "Controllo ortografico"
 
 #: ../plugins/actions/spellchecking/spellchecking.cc:642
-msgid "Launch the spell checking"
+msgid "Launch spell-checking"
 msgstr "Lancia il controllo ortografico"
 
 #: ../plugins/actions/splitdocument/dialog-split-document.ui.h:1
@@ -2338,7 +2333,7 @@ msgid "The beginning for the new document:"
 msgstr "Parte iniziale di un nuovo documento:"
 
 #: ../plugins/actions/splitdocument/splitdocument.cc:46
-msgid "You can't use <i>split</i> with this document."
+msgid "You can't use the <i>split</i> action with this document."
 msgstr "Impossibile usare <i>dividi</i> con questo documento."
 
 #. Remove subtitles used by the new one
@@ -2362,7 +2357,7 @@ msgid "_Split"
 msgstr "Semplice"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:45
-msgid "Split the selected subtitles"
+msgid "Split selected subtitles"
 msgstr "Dividi sottotitoli selezionati"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:94
@@ -2570,7 +2565,7 @@ msgstr ""
 
 #: ../plugins/actions/template/template.cc:110
 #, fuzzy
-msgid "Save the current document as template."
+msgid "Save the current document as template"
 msgstr "Divide il documento in due parti"
 
 #: ../plugins/actions/textcorrection/assistant-text-correction.ui.h:1
@@ -2705,7 +2700,7 @@ msgstr ""
 
 #: ../plugins/actions/timemodemanagement/timemodemanagement.cc:46
 #, fuzzy
-msgid "_Times"
+msgid "_Timecodes"
 msgstr "Limiti"
 
 #: ../plugins/actions/timemodemanagement/timemodemanagement.cc:53
@@ -2745,7 +2740,7 @@ msgid "Timing From Player"
 msgstr "Video"
 
 #: ../plugins/actions/timingfromplayer/timingfromplayer.cc:76
-msgid "Use the current player position to set subtitle time"
+msgid "Use the current player position to set subtitle timecodes"
 msgstr ""
 
 #: ../plugins/actions/timingfromplayer/timingfromplayer.cc:80
@@ -2867,13 +2862,13 @@ msgstr "_Video:"
 
 #. _("_Open Media"),
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:49
-msgid "Open a multimedia file"
+msgid "Open an audio file or a video file"
 msgstr ""
 
 #. _("_Close Media"),
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:56
 #, fuzzy
-msgid "Close a multimedia file"
+msgid "Close an audio file or a video file"
 msgstr "Salva il file corrente"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:69
@@ -2882,7 +2877,7 @@ msgid "_Play / Pause"
 msgstr "Play / Pausa"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:70
-msgid "Play or make a pause"
+msgid "Play or pause audio or video"
 msgstr "Avvia/mette in pausa"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:76
@@ -2898,7 +2893,7 @@ msgstr "Cambia framerate"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:81
 #, fuzzy
-msgid "Frame skip backwards"
+msgid "Skip backwards by a frame"
 msgstr "Salta indietro"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:88
@@ -2960,7 +2955,7 @@ msgid "Skip _Forward"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:134
-msgid "Frame skip forward"
+msgid "Skip forward by a frame"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:142
@@ -2996,7 +2991,7 @@ msgstr ""
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:185
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:190
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:195
-msgid "Define the playback rate"
+msgid "Set the playback rate"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:184
@@ -3017,7 +3012,7 @@ msgid "_Seek To Selection"
 msgstr "Vai alla selezione"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:202
-msgid "Seek to the first selected subtitle"
+msgid "Seek to start of the first selected subtitle"
 msgstr "Vai al primo sottotitolo selezionato"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:208
@@ -3062,7 +3057,7 @@ msgid "Play _Next Subtitle"
 msgstr "Riproduci prossimo sottotitolo"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:241
-msgid "Play next subtitle from the first selected subtitle"
+msgid "Play the subtitle that is next to the first selected subtitle"
 msgstr "Riproduce il prossimo sottotitolo partendo dal selezionato"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:247
@@ -3111,7 +3106,7 @@ msgid "Audio Track"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:281
-msgid "Choice of an audio track"
+msgid "Choose the audio track"
 msgstr ""
 
 #. A default track "Auto"
@@ -3159,7 +3154,7 @@ msgstr ""
 
 #: ../plugins/actions/viewmanager/viewmanager.cc:338
 #, fuzzy
-msgid "Manage the views"
+msgid "Manage views"
 msgstr "Modifica stile"
 
 #: ../plugins/actions/waveformmanagement/waveformgenerator.cc:32
@@ -3192,7 +3187,7 @@ msgid "_Generate Waveform From Video"
 msgstr "Genera Waveform"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:64
-msgid "Generate the waveform from the current video file"
+msgid "Generate a waveform from the current video file"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:70
@@ -3202,7 +3197,7 @@ msgstr "Genera Waveform"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:71
 #, fuzzy
-msgid "Generate an dummy waveform (sine)"
+msgid "Generate a dummy waveform (a sinusoidal wave)"
 msgstr "Genera Waveform"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:76
@@ -3212,7 +3207,7 @@ msgstr "Salva Waveform"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:76
 #, fuzzy
-msgid "Save waveform to file"
+msgid "Save the waveform to a file"
 msgstr "Salva Waveform"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:82
@@ -3222,7 +3217,7 @@ msgstr "Salva Waveform"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:82
 #, fuzzy
-msgid "Close waveform"
+msgid "Close the waveform"
 msgstr "Salva Waveform"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:88
@@ -3247,11 +3242,11 @@ msgstr "Adatta"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:109
 #, fuzzy
-msgid "_Center With Selected Subtitle"
+msgid "_Center Selected Subtitle"
 msgstr "Centra il sottotitolo selezionato"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:119
-msgid "Scrolling With _Player"
+msgid "Scrolling With _Video"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:131
@@ -3541,7 +3536,7 @@ msgstr ""
 
 #: ../src/gui/application.cc:296
 #, fuzzy
-msgid "Times"
+msgid "Timecodes"
 msgstr "Limiti"
 
 #: ../src/gui/application.cc:296
@@ -4174,7 +4169,7 @@ msgid "About"
 msgstr "_Informazioni su..."
 
 #: ../plugins/actions/about/about.se-plugin.in.h:2
-msgid "Displays the application's information."
+msgid "Displays information about the application."
 msgstr ""
 
 #: ../plugins/actions/adjusttime/adjusttime.se-plugin.in.h:1
