--- a/po/lt.po
+++ b/po/lt.po
@@ -363,7 +363,7 @@ msgid "_Combine"
 msgstr "_Sujungti"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:44
-msgid "Merge the selected subtitles"
+msgid "Merge selected subtitles"
 msgstr "Sulieti pasirinktus subtitrus"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:135
@@ -623,10 +623,6 @@ msgstr "_Sekantis dokumentas"
 msgid "_Duplicate"
 msgstr "_Padaryti kopiją"
 
-#: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:44
-msgid "Duplicate the selected subtitles"
-msgstr "Dubliuoti pasirinktus subtitrus"
-
 #: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:99
 msgid "Duplicate selected subtitles"
 msgstr "Dubliuoti pasirinktus subtitrus"
@@ -636,7 +632,7 @@ msgid "_Edit Cell"
 msgstr "_Redaguoti langelį"
 
 #: ../plugins/actions/editcell/editcell.cc:44
-msgid "Start the editing of the focused cell"
+msgid "Start editing the focused cell"
 msgstr "Pradėti redaguoti pasirinktą langelį"
 
 #: ../plugins/actions/editcell/editcell.cc:49
@@ -644,7 +640,7 @@ msgid "Edit _Next Cell"
 msgstr "Redaguoti _sekantį langelį"
 
 #: ../plugins/actions/editcell/editcell.cc:50
-msgid "Start the editing of the next cell"
+msgid "Start editing the next cell"
 msgstr "Pradėti redaguoti sekantį langelį"
 
 #: ../plugins/actions/errorchecking/dialog-error-checking-preferences.ui.h:1
@@ -1231,7 +1227,7 @@ msgid "Insert _Before"
 msgstr "Įterpti _prieš"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:45
-msgid "Insert blank subtitle before the selected subtitle"
+msgid "Insert a blank subtitle before the first selected subtitle"
 msgstr "Prieš pasirinktą subtitrą įterpti tuščią subtitrą"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:51
@@ -1239,7 +1235,7 @@ msgid "Insert _After"
 msgstr "Įterpti _po"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:52
-msgid "Insert blank subtitle after the selected subtitle"
+msgid "Insert a blank subtitle after the first selected subtitle"
 msgstr "Po pasirinkto subtitro įterpti tuščią subtitrą"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:117
@@ -1253,7 +1249,7 @@ msgid "_Italic"
 msgstr "_Kursyvas"
 
 #: ../plugins/actions/italicize/italicize.cc:45
-msgid "Italicize the selected subtitles text"
+msgid "Italicize the text of the selected subtitles"
 msgstr "Paversti pasirinktų subtitrų tekstą"
 
 #: ../plugins/actions/italicize/italicize.cc:110
@@ -1908,7 +1904,7 @@ msgid "OpenGL"
 msgstr "OpenGL"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:44
-msgid "Delete the selected subtitles"
+msgid "Delete selected subtitles"
 msgstr "Ištrinti pasirinktus subtitrus"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:104
@@ -2253,7 +2249,7 @@ msgid "_Split"
 msgstr "_Skaidyti"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:45
-msgid "Split the selected subtitles"
+msgid "Split selected subtitles"
 msgstr "Padalinti pasirinktus subtitrus"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:94
