--- a/po/nl.po
+++ b/po/nl.po
@@ -21,7 +21,7 @@ msgstr ""
 
 #. comments
 #: ../plugins/actions/about/about.cc:76
-msgid "a tool for subtitles edition"
+msgid "A tool for editing subtitles"
 msgstr "een programma om ondertiteling te bewerken"
 
 #. translator-credits
@@ -380,7 +380,7 @@ msgid "_Combine"
 msgstr ""
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:44
-msgid "Merge the selected subtitles"
+msgid "Merge selected subtitles"
 msgstr ""
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:135
@@ -660,15 +660,6 @@ msgstr "Nieuw document"
 msgid "_Next Document"
 msgstr "Nieuw document"
 
-#: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:43
-msgid "_Duplicate"
-msgstr ""
-
-#: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:44
-#, fuzzy
-msgid "Duplicate the selected subtitles"
-msgstr "Selecteer volgende ondertitel"
-
 #: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:99
 #, fuzzy
 msgid "Duplicate selected subtitles"
@@ -680,7 +671,7 @@ msgid "_Edit Cell"
 msgstr "Be_werken"
 
 #: ../plugins/actions/editcell/editcell.cc:44
-msgid "Start the editing of the focused cell"
+msgid "Start editing the focused cell"
 msgstr ""
 
 #: ../plugins/actions/editcell/editcell.cc:49
@@ -688,7 +679,7 @@ msgid "Edit _Next Cell"
 msgstr ""
 
 #: ../plugins/actions/editcell/editcell.cc:50
-msgid "Start the editing of the next cell"
+msgid "Start editing the next cell"
 msgstr ""
 
 #: ../plugins/actions/errorchecking/dialog-error-checking-preferences.ui.h:1
@@ -826,7 +817,7 @@ msgstr "Spellingscontrole"
 
 #: ../plugins/actions/errorchecking/errorcheckingplugin.cc:692
 #, fuzzy
-msgid "Launch the error checking."
+msgid "Launch error checking."
 msgstr "Spellingscontrole"
 
 #: ../plugins/actions/errorchecking/maxcharactersperline.h:29
@@ -1225,7 +1216,7 @@ msgstr "_Open"
 
 #: ../plugins/actions/findbytime/findbytime.cc:57
 #: ../plugins/actions/findbytime/findbytime.se-plugin.in.h:2
-msgid "Finds the subtitle nearest to the current player position."
+msgid "Finds the subtitle nearest to the current player position"
 msgstr ""
 
 #: ../plugins/actions/findbytime/findbytime.cc:114
@@ -1276,7 +1267,7 @@ msgid "Insert _Before"
 msgstr "Invoegen ervoor"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:45
-msgid "Insert blank subtitle before the selected subtitle"
+msgid "Insert a blank subtitle before the first selected subtitle"
 msgstr ""
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:51
@@ -1285,7 +1276,7 @@ msgid "Insert _After"
 msgstr "Invoegen erna"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:52
-msgid "Insert blank subtitle after the selected subtitle"
+msgid "Insert a blank subtitle after the first selected subtitle"
 msgstr ""
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:117
@@ -1302,7 +1293,7 @@ msgstr "Baltisch"
 
 #: ../plugins/actions/italicize/italicize.cc:45
 #, fuzzy
-msgid "Italicize the selected subtitles text"
+msgid "Italicize the text of the selected subtitles"
 msgstr "Selecteer volgende ondertitel"
 
 #: ../plugins/actions/italicize/italicize.cc:110
@@ -1364,7 +1355,7 @@ msgstr "Opslaan golfpatroon"
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:60
 #, fuzzy
-msgid "Save keyframes to the file"
+msgid "Save keyframes to a file"
 msgstr "Golfpatroon opslaan in \"%s\""
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:66
@@ -1382,7 +1373,7 @@ msgstr ""
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:79
 #, fuzzy
-msgid "Close the keyframes"
+msgid "Close Keyframes"
 msgstr "Bestand opslaan mislukt."
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:79
@@ -1992,7 +1983,7 @@ msgstr ""
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:44
 #, fuzzy
-msgid "Delete the selected subtitles"
+msgid "Delete selected subtitles"
 msgstr "Selecteer volgende ondertitel"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:104
@@ -2331,7 +2322,7 @@ msgstr "Spelling controleren"
 
 #: ../plugins/actions/spellchecking/spellchecking.cc:642
 #, fuzzy
-msgid "Launch the spell checking"
+msgid "Launch spell-checking"
 msgstr "Spellingscontrole"
 
 #: ../plugins/actions/splitdocument/dialog-split-document.ui.h:1
@@ -2346,7 +2337,7 @@ msgstr ""
 
 #: ../plugins/actions/splitdocument/splitdocument.cc:46
 #, fuzzy
-msgid "You can't use <i>split</i> with this document."
+msgid "You can't use the <i>split</i> action with this document."
 msgstr "\"%s\" (%s) samengevoegd in dit document."
 
 #. Remove subtitles used by the new one
@@ -2371,7 +2362,7 @@ msgstr "Splitsen"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:45
 #, fuzzy
-msgid "Split the selected subtitles"
+msgid "Split selected subtitles"
 msgstr "Selecteer volgende ondertitel"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:94
@@ -2581,7 +2572,7 @@ msgstr ""
 
 #: ../plugins/actions/template/template.cc:110
 #, fuzzy
-msgid "Save the current document as template."
+msgid "Save the current document as template"
 msgstr "Bestand opslaan mislukt."
 
 #: ../plugins/actions/textcorrection/assistant-text-correction.ui.h:1
@@ -2716,7 +2707,7 @@ msgstr ""
 
 #: ../plugins/actions/timemodemanagement/timemodemanagement.cc:46
 #, fuzzy
-msgid "_Times"
+msgid "_Timecodes"
 msgstr "_Timing"
 
 #: ../plugins/actions/timemodemanagement/timemodemanagement.cc:53
@@ -2756,7 +2747,7 @@ msgid "Timing From Player"
 msgstr "Mediaspeler"
 
 #: ../plugins/actions/timingfromplayer/timingfromplayer.cc:76
-msgid "Use the current player position to set subtitle time"
+msgid "Use the current player position to set subtitle timecodes"
 msgstr ""
 
 #: ../plugins/actions/timingfromplayer/timingfromplayer.cc:80
@@ -2878,13 +2869,13 @@ msgstr "_Video"
 
 #. _("_Open Media"),
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:49
-msgid "Open a multimedia file"
+msgid "Open an audio file or a video file"
 msgstr ""
 
 #. _("_Close Media"),
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:56
 #, fuzzy
-msgid "Close a multimedia file"
+msgid "Close an audio file or a video file"
 msgstr "Bestand opslaan mislukt."
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:69
@@ -2892,7 +2883,7 @@ msgid "_Play / Pause"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:70
-msgid "Play or make a pause"
+msgid "Play or pause audio or video"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:76
@@ -2906,7 +2897,7 @@ msgid "Frame"
 msgstr "FPS aanpassen"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:81
-msgid "Frame skip backwards"
+msgid "Skip backwards by a frame"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:88
@@ -2961,7 +2952,7 @@ msgid "Skip _Forward"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:134
-msgid "Frame skip forward"
+msgid "Skip forward by a frame"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:142
@@ -2993,7 +2984,7 @@ msgstr ""
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:185
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:190
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:195
-msgid "Define the playback rate"
+msgid "Set the playback rate"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:184
@@ -3014,7 +3005,7 @@ msgid "_Seek To Selection"
 msgstr "Speel selectie"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:202
-msgid "Seek to the first selected subtitle"
+msgid "Seek to start of the first selected subtitle"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:208
@@ -3060,7 +3051,7 @@ msgid "Play _Next Subtitle"
 msgstr "Speel volgende ondertitel"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:241
-msgid "Play next subtitle from the first selected subtitle"
+msgid "Play the subtitle that is next to the first selected subtitle"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:247
@@ -3109,7 +3100,7 @@ msgid "Audio Track"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:281
-msgid "Choice of an audio track"
+msgid "Choose the audio track"
 msgstr ""
 
 #. A default track "Auto"
@@ -3157,7 +3148,7 @@ msgstr ""
 
 #: ../plugins/actions/viewmanager/viewmanager.cc:338
 #, fuzzy
-msgid "Manage the views"
+msgid "Manage views"
 msgstr "Stijlen beheren"
 
 #: ../plugins/actions/waveformmanagement/waveformgenerator.cc:32
@@ -3191,7 +3182,7 @@ msgid "_Generate Waveform From Video"
 msgstr "Maak golfpatroon"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:64
-msgid "Generate the waveform from the current video file"
+msgid "Generate a waveform from the current video file"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:70
@@ -3201,7 +3192,7 @@ msgstr "Maak golfpatroon"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:71
 #, fuzzy
-msgid "Generate an dummy waveform (sine)"
+msgid "Generate a dummy waveform (a sinusoidal wave)"
 msgstr "Maak golfpatroon"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:76
@@ -3211,7 +3202,7 @@ msgstr "Opslaan golfpatroon"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:76
 #, fuzzy
-msgid "Save waveform to file"
+msgid "Save the waveform to a file"
 msgstr "Golfpatroon opslaan in \"%s\""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:82
@@ -3221,7 +3212,7 @@ msgstr "Opslaan golfpatroon"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:82
 #, fuzzy
-msgid "Close waveform"
+msgid "Close the waveform"
 msgstr "Opslaan golfpatroon"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:88
@@ -3246,11 +3237,11 @@ msgstr "Zoom:"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:109
 #, fuzzy
-msgid "_Center With Selected Subtitle"
+msgid "_Center Selected Subtitle"
 msgstr "Selecteer volgende ondertitel"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:119
-msgid "Scrolling With _Player"
+msgid "Scrolling With _Video"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:131
@@ -3539,7 +3530,7 @@ msgstr ""
 
 #: ../src/gui/application.cc:296
 #, fuzzy
-msgid "Times"
+msgid "Timecodes"
 msgstr "_Timing"
 
 #: ../src/gui/application.cc:296
@@ -4176,7 +4167,7 @@ msgid "About"
 msgstr "_Over"
 
 #: ../plugins/actions/about/about.se-plugin.in.h:2
-msgid "Displays the application's information."
+msgid "Displays information about the application."
 msgstr ""
 
 #: ../plugins/actions/adjusttime/adjusttime.se-plugin.in.h:1
