--- a/po/subtitleeditor.pot
+++ b/po/subtitleeditor.pot
@@ -20,7 +20,7 @@ msgstr ""
 
 #. comments
 #: ../plugins/actions/about/about.cc:76
-msgid "a tool for subtitles edition"
+msgid "A tool for editing subtitles"
 msgstr ""
 
 #. translator-credits
@@ -343,7 +343,7 @@ msgid "_Combine"
 msgstr ""
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:44
-msgid "Merge the selected subtitles"
+msgid "Merge selected subtitles"
 msgstr ""
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:135
@@ -599,10 +599,6 @@ msgstr ""
 msgid "_Duplicate"
 msgstr ""
 
-#: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:44
-msgid "Duplicate the selected subtitles"
-msgstr ""
-
 #: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:99
 msgid "Duplicate selected subtitles"
 msgstr ""
@@ -612,7 +608,7 @@ msgid "_Edit Cell"
 msgstr ""
 
 #: ../plugins/actions/editcell/editcell.cc:44
-msgid "Start the editing of the focused cell"
+msgid "Start editing the focused cell"
 msgstr ""
 
 #: ../plugins/actions/editcell/editcell.cc:49
@@ -620,7 +616,7 @@ msgid "Edit _Next Cell"
 msgstr ""
 
 #: ../plugins/actions/editcell/editcell.cc:50
-msgid "Start the editing of the next cell"
+msgid "Start editing the next cell"
 msgstr ""
 
 #: ../plugins/actions/errorchecking/dialog-error-checking-preferences.ui.h:1
@@ -747,7 +743,7 @@ msgid "_Error Checking"
 msgstr ""
 
 #: ../plugins/actions/errorchecking/errorcheckingplugin.cc:692
-msgid "Launch the error checking."
+msgid "Launch error checking."
 msgstr ""
 
 #: ../plugins/actions/errorchecking/maxcharactersperline.h:29
@@ -1116,7 +1112,7 @@ msgstr ""
 
 #: ../plugins/actions/findbytime/findbytime.cc:57
 #: ../plugins/actions/findbytime/findbytime.se-plugin.in.h:2
-msgid "Finds the subtitle nearest to the current player position."
+msgid "Finds the subtitle nearest to the current player position"
 msgstr ""
 
 #: ../plugins/actions/findbytime/findbytime.cc:114
@@ -1165,7 +1161,7 @@ msgid "Insert _Before"
 msgstr ""
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:45
-msgid "Insert blank subtitle before the selected subtitle"
+msgid "Insert a blank subtitle before the first selected subtitle"
 msgstr ""
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:51
@@ -1173,7 +1169,7 @@ msgid "Insert _After"
 msgstr ""
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:52
-msgid "Insert blank subtitle after the selected subtitle"
+msgid "Insert a blank subtitle after the first selected subtitle"
 msgstr ""
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:117
@@ -1187,7 +1183,7 @@ msgid "_Italic"
 msgstr ""
 
 #: ../plugins/actions/italicize/italicize.cc:45
-msgid "Italicize the selected subtitles text"
+msgid "Italicize the text of the selected subtitles"
 msgstr ""
 
 #: ../plugins/actions/italicize/italicize.cc:110
@@ -1241,7 +1237,7 @@ msgid "Save Keyframes"
 msgstr ""
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:60
-msgid "Save keyframes to the file"
+msgid "Save keyframes to a file"
 msgstr ""
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:66
@@ -1258,7 +1254,7 @@ msgid "Generate Keyframes From Video (Using Frame)"
 msgstr ""
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:79
-msgid "Close the keyframes"
+msgid "Close Keyframes"
 msgstr ""
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:79
@@ -1824,7 +1820,7 @@ msgid "OpenGL"
 msgstr ""
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:44
-msgid "Delete the selected subtitles"
+msgid "Delete selected subtitles"
 msgstr ""
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:104
@@ -2121,7 +2117,7 @@ msgid "_Spell Check"
 msgstr ""
 
 #: ../plugins/actions/spellchecking/spellchecking.cc:642
-msgid "Launch the spell checking"
+msgid "Launch spell-checking"
 msgstr ""
 
 #: ../plugins/actions/splitdocument/dialog-split-document.ui.h:1
@@ -2134,7 +2130,7 @@ msgid "The beginning for the new document:"
 msgstr ""
 
 #: ../plugins/actions/splitdocument/splitdocument.cc:46
-msgid "You can't use <i>split</i> with this document."
+msgid "You can't use the <i>split</i> action with this document."
 msgstr ""
 
 #. Remove subtitles used by the new one
@@ -2155,7 +2151,7 @@ msgid "_Split"
 msgstr ""
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:45
-msgid "Split the selected subtitles"
+msgid "Split selected subtitles"
 msgstr ""
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:94
@@ -2347,7 +2343,7 @@ msgid "_Save As Template"
 msgstr ""
 
 #: ../plugins/actions/template/template.cc:110
-msgid "Save the current document as template."
+msgid "Save the current document as template"
 msgstr ""
 
 #: ../plugins/actions/textcorrection/assistant-text-correction.ui.h:1
@@ -2476,7 +2472,7 @@ msgid "Text _Correction"
 msgstr ""
 
 #: ../plugins/actions/timemodemanagement/timemodemanagement.cc:46
-msgid "_Times"
+msgid "_Timecodes"
 msgstr ""
 
 #: ../plugins/actions/timemodemanagement/timemodemanagement.cc:53
@@ -2513,7 +2509,7 @@ msgid "Timing From Player"
 msgstr ""
 
 #: ../plugins/actions/timingfromplayer/timingfromplayer.cc:76
-msgid "Use the current player position to set subtitle time"
+msgid "Use the current player position to set subtitle timecodes"
 msgstr ""
 
 #: ../plugins/actions/timingfromplayer/timingfromplayer.cc:80
@@ -2622,12 +2618,12 @@ msgstr ""
 
 #. _("_Open Media"),
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:49
-msgid "Open a multimedia file"
+msgid "Open an audio file or a video file"
 msgstr ""
 
 #. _("_Close Media"),
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:56
-msgid "Close a multimedia file"
+msgid "Close an audio file or a video file"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:69
@@ -2635,7 +2631,7 @@ msgid "_Play / Pause"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:70
-msgid "Play or make a pause"
+msgid "Play or pause audio or video"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:76
@@ -2648,7 +2644,7 @@ msgid "Frame"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:81
-msgid "Frame skip backwards"
+msgid "Skip backwards by a frame"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:88
@@ -2701,7 +2697,7 @@ msgid "Skip _Forward"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:134
-msgid "Frame skip forward"
+msgid "Skip forward by a frame"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:142
@@ -2733,7 +2729,7 @@ msgstr ""
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:185
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:190
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:195
-msgid "Define the playback rate"
+msgid "Set the playback rate"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:184
@@ -2753,7 +2749,7 @@ msgid "_Seek To Selection"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:202
-msgid "Seek to the first selected subtitle"
+msgid "Seek to start of the first selected subtitle"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:208
@@ -2793,7 +2789,7 @@ msgid "Play _Next Subtitle"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:241
-msgid "Play next subtitle from the first selected subtitle"
+msgid "Play the subtitle that is next to the first selected subtitle"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:247
@@ -2841,7 +2837,7 @@ msgid "Audio Track"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:281
-msgid "Choice of an audio track"
+msgid "Choose the audio track"
 msgstr ""
 
 #. A default track "Auto"
@@ -2887,7 +2883,7 @@ msgid "View _Manager"
 msgstr ""
 
 #: ../plugins/actions/viewmanager/viewmanager.cc:338
-msgid "Manage the views"
+msgid "Manage views"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformgenerator.cc:32
@@ -2918,7 +2914,7 @@ msgid "_Generate Waveform From Video"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:64
-msgid "Generate the waveform from the current video file"
+msgid "Generate a waveform from the current video file"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:70
@@ -2926,7 +2922,7 @@ msgid "_Generate Dummy Waveform"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:71
-msgid "Generate an dummy waveform (sine)"
+msgid "Generate a dummy waveform (a sinusoidal wave)"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:76
@@ -2934,7 +2930,7 @@ msgid "_Save Waveform"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:76
-msgid "Save waveform to file"
+msgid "Save the waveform to a file"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:82
@@ -2942,7 +2938,7 @@ msgid "_Close Waveform"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:82
-msgid "Close waveform"
+msgid "Close the waveform"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:88
@@ -2962,15 +2958,15 @@ msgid "Zoom _All"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:109
-msgid "_Center With Selected Subtitle"
+msgid "_Center Selected Subtitle"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:119
-msgid "Scrolling With _Player"
+msgid "Scrolling With _Video"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:131
-msgid "Select With _Player"
+msgid "Select With _Video"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:141
@@ -3248,7 +3244,7 @@ msgid "Please check your GStreamer installation."
 msgstr ""
 
 #: ../src/gui/application.cc:296
-msgid "Times"
+msgid "Timecodes"
 msgstr ""
 
 #: ../src/gui/application.cc:296
@@ -3831,7 +3827,7 @@ msgid "About"
 msgstr ""
 
 #: ../plugins/actions/about/about.se-plugin.in.h:2
-msgid "Displays the application's information."
+msgid "Displays information about the application."
 msgstr ""
 
 #: ../plugins/actions/adjusttime/adjusttime.se-plugin.in.h:1
