--- a/po/tr.po
+++ b/po/tr.po
@@ -21,7 +21,7 @@ msgstr ""
 
 #. comments
 #: ../plugins/actions/about/about.cc:76
-msgid "a tool for subtitles edition"
+msgid "A tool for editing subtitles"
 msgstr "alt yazı düzenleme aracı"
 
 #. translator-credits
@@ -386,7 +386,7 @@ msgid "_Combine"
 msgstr "_Birleştir"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:44
-msgid "Merge the selected subtitles"
+msgid "Merge selected subtitles"
 msgstr "Seçili altyazıları birleştir"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:135
@@ -648,10 +648,6 @@ msgstr "Belgeyi Böl_"
 msgid "_Duplicate"
 msgstr "_Aynısından Oluştur"
 
-#: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:44
-msgid "Duplicate the selected subtitles"
-msgstr "Seçili altyazının aynısından oluştur"
-
 #: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:99
 msgid "Duplicate selected subtitles"
 msgstr "Seçili altyazıların aynısından oluştur"
@@ -661,7 +657,7 @@ msgid "_Edit Cell"
 msgstr "_Hücreyi Düzenle"
 
 #: ../plugins/actions/editcell/editcell.cc:44
-msgid "Start the editing of the focused cell"
+msgid "Start editing the focused cell"
 msgstr "Seçili hücreyi düzenlemeye başla"
 
 #: ../plugins/actions/editcell/editcell.cc:49
@@ -669,7 +665,7 @@ msgid "Edit _Next Cell"
 msgstr "_Sonraki Hücreyi Düzenle"
 
 #: ../plugins/actions/editcell/editcell.cc:50
-msgid "Start the editing of the next cell"
+msgid "Start editing the next cell"
 msgstr "Sonraki hücreyi düzenlemeye başla"
 
 #: ../plugins/actions/errorchecking/dialog-error-checking-preferences.ui.h:1
@@ -794,7 +790,7 @@ msgid "_Error Checking"
 msgstr "_Hata Denetimi"
 
 #: ../plugins/actions/errorchecking/errorcheckingplugin.cc:692
-msgid "Launch the error checking."
+msgid "Launch error checking."
 msgstr "Hata denetimini başlat"
 
 #: ../plugins/actions/errorchecking/maxcharactersperline.h:29
@@ -1196,7 +1192,7 @@ msgstr "Altyazı Ekle"
 #: ../plugins/actions/findbytime/findbytime.cc:57
 #: ../plugins/actions/findbytime/findbytime.se-plugin.in.h:2
 #, fuzzy
-msgid "Finds the subtitle nearest to the current player position."
+msgid "Finds the subtitle nearest to the current player position"
 msgstr "Altyazı ekranda göründüğünde"
 
 #: ../plugins/actions/findbytime/findbytime.cc:114
@@ -1245,7 +1241,7 @@ msgid "Insert _Before"
 msgstr "_Önüne Ekle"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:45
-msgid "Insert blank subtitle before the selected subtitle"
+msgid "Insert a blank subtitle before the first selected subtitle"
 msgstr "Seçili altyazıdan önce boş altyazı ekle"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:51
@@ -1253,7 +1249,7 @@ msgid "Insert _After"
 msgstr "_Sonuna Ekle"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:52
-msgid "Insert blank subtitle after the selected subtitle"
+msgid "Insert a blank subtitle after the first selected subtitle"
 msgstr "Seçili altyazıdan sonra boş altyazı ekle"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:117
@@ -1267,7 +1263,7 @@ msgid "_Italic"
 msgstr "_Yatık"
 
 #: ../plugins/actions/italicize/italicize.cc:45
-msgid "Italicize the selected subtitles text"
+msgid "Italicize the text of the selected subtitles"
 msgstr "Seçili altyazı metnini yatık konuma getir"
 
 #: ../plugins/actions/italicize/italicize.cc:110
@@ -1322,7 +1318,7 @@ msgid "Save Keyframes"
 msgstr ""
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:60
-msgid "Save keyframes to the file"
+msgid "Save keyframes to a file"
 msgstr ""
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:66
@@ -1340,7 +1336,7 @@ msgid "Generate Keyframes From Video (Using Frame)"
 msgstr "_Videodan Dalga Biçimi Üret"
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:79
-msgid "Close the keyframes"
+msgid "Close Keyframes"
 msgstr ""
 
 #: ../plugins/actions/keyframesmanagement/keyframesmanagement.cc:79
@@ -1920,7 +1916,7 @@ msgid "OpenGL"
 msgstr "OpenGL"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:44
-msgid "Delete the selected subtitles"
+msgid "Delete selected subtitles"
 msgstr "Seçili altyazıları sil"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:104
@@ -2228,7 +2224,7 @@ msgid "_Spell Check"
 msgstr "_Yazım Denetimi"
 
 #: ../plugins/actions/spellchecking/spellchecking.cc:642
-msgid "Launch the spell checking"
+msgid "Launch spell-checking"
 msgstr "Dilbilgisi kontrolünü çalıştır"
 
 #: ../plugins/actions/splitdocument/dialog-split-document.ui.h:1
@@ -2241,7 +2237,7 @@ msgid "The beginning for the new document:"
 msgstr "Yeni dosya için başlangıç:"
 
 #: ../plugins/actions/splitdocument/splitdocument.cc:46
-msgid "You can't use <i>split</i> with this document."
+msgid "You can't use the <i>split</i> action with this document."
 msgstr "Bu dosya için <i>ikiye böl</i> işlemini kullanamazsınız."
 
 #. Remove subtitles used by the new one
@@ -2262,7 +2258,7 @@ msgid "_Split"
 msgstr "_Ayır"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:45
-msgid "Split the selected subtitles"
+msgid "Split selected subtitles"
 msgstr "Seçili altyazıları ayır"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:94
@@ -2467,7 +2463,7 @@ msgstr ""
 
 #: ../plugins/actions/template/template.cc:110
 #, fuzzy
-msgid "Save the current document as template."
+msgid "Save the current document as template"
 msgstr "Geçerli belgeyi ikiye böler."
 
 #: ../plugins/actions/textcorrection/assistant-text-correction.ui.h:1
@@ -2597,7 +2593,7 @@ msgid "Text _Correction"
 msgstr ""
 
 #: ../plugins/actions/timemodemanagement/timemodemanagement.cc:46
-msgid "_Times"
+msgid "_Timecodes"
 msgstr "_Süre"
 
 #: ../plugins/actions/timemodemanagement/timemodemanagement.cc:53
@@ -2635,7 +2631,7 @@ msgid "Timing From Player"
 msgstr ""
 
 #: ../plugins/actions/timingfromplayer/timingfromplayer.cc:76
-msgid "Use the current player position to set subtitle time"
+msgid "Use the current player position to set subtitle timecodes"
 msgstr ""
 
 #: ../plugins/actions/timingfromplayer/timingfromplayer.cc:80
@@ -2753,12 +2749,12 @@ msgstr "_Video"
 
 #. _("_Open Media"),
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:49
-msgid "Open a multimedia file"
+msgid "Open an audio file or a video file"
 msgstr "Çokluortam dosyası aç"
 
 #. _("_Close Media"),
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:56
-msgid "Close a multimedia file"
+msgid "Close an audio file or a video file"
 msgstr "Çokluortam dosyasını kapat"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:69
@@ -2766,7 +2762,7 @@ msgid "_Play / Pause"
 msgstr "_Oynat / Duraklat"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:70
-msgid "Play or make a pause"
+msgid "Play or pause audio or video"
 msgstr "Oynat ve duraklat"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:76
@@ -2781,7 +2777,7 @@ msgstr "_Kare"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:81
 #, fuzzy
-msgid "Frame skip backwards"
+msgid "Skip backwards by a frame"
 msgstr "Hassas geri sarma"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:88
@@ -2836,7 +2832,7 @@ msgstr "_İleri Atla"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:134
 #, fuzzy
-msgid "Frame skip forward"
+msgid "Skip forward by a frame"
 msgstr "Hassas ileri sarma"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:142
@@ -2869,7 +2865,7 @@ msgstr "Oran"
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:185
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:190
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:195
-msgid "Define the playback rate"
+msgid "Set the playback rate"
 msgstr "Oynatma hızını tanımla"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:184
@@ -2889,7 +2885,7 @@ msgid "_Seek To Selection"
 msgstr "_Seçime Git"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:202
-msgid "Seek to the first selected subtitle"
+msgid "Seek to start of the first selected subtitle"
 msgstr "Seçilen ilk altyazıya git"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:208
@@ -2931,7 +2927,7 @@ msgid "Play _Next Subtitle"
 msgstr "_Sonraki Altyazıyı Oynat"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:241
-msgid "Play next subtitle from the first selected subtitle"
+msgid "Play the subtitle that is next to the first selected subtitle"
 msgstr "İlk seçilen altyazıdan sonraki alt yazıyı oynat"
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:247
@@ -2979,7 +2975,7 @@ msgid "Audio Track"
 msgstr ""
 
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:281
-msgid "Choice of an audio track"
+msgid "Choose the audio track"
 msgstr ""
 
 #. A default track "Auto"
@@ -3027,7 +3023,7 @@ msgid "View _Manager"
 msgstr "Görünüm _Yöneticisi"
 
 #: ../plugins/actions/viewmanager/viewmanager.cc:338
-msgid "Manage the views"
+msgid "Manage views"
 msgstr "Görünümleri yönet"
 
 #: ../plugins/actions/waveformmanagement/waveformgenerator.cc:32
@@ -3059,7 +3055,7 @@ msgid "_Generate Waveform From Video"
 msgstr "_Videodan Dalga Biçimi Üret"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:64
-msgid "Generate the waveform from the current video file"
+msgid "Generate a waveform from the current video file"
 msgstr "Geçerli video dosyasından dalga biçimi üret"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:70
@@ -3067,7 +3063,7 @@ msgid "_Generate Dummy Waveform"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:71
-msgid "Generate an dummy waveform (sine)"
+msgid "Generate a dummy waveform (a sinusoidal wave)"
 msgstr ""
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:76
@@ -3076,7 +3072,7 @@ msgstr "_Dalga Biçimini Kaydet"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:76
 #, fuzzy
-msgid "Save waveform to file"
+msgid "Save the waveform to a file"
 msgstr "Dalga biçimini dosyaya kaydet"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:82
@@ -3086,7 +3082,7 @@ msgstr "_Dalga Biçimini Kaydet"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:82
 #, fuzzy
-msgid "Close waveform"
+msgid "Close the waveform"
 msgstr "Dalga Biçimini Kaydet"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:88
@@ -3106,11 +3102,11 @@ msgid "Zoom _All"
 msgstr "_Tamamını Göster"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:109
-msgid "_Center With Selected Subtitle"
+msgid "_Center Selected Subtitle"
 msgstr "Seçili Altyazı İle _Ortala"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:119
-msgid "Scrolling With _Player"
+msgid "Scrolling With _Video"
 msgstr "G"
 
 #: ../plugins/actions/waveformmanagement/waveformmanagement.cc:131
@@ -3401,7 +3397,7 @@ msgid "Please check your GStreamer installation."
 msgstr "Lütfen GStreamer kurulumunuzu kontrol edin."
 
 #: ../src/gui/application.cc:296
-msgid "Times"
+msgid "Timecodes"
 msgstr ""
 
 #: ../src/gui/application.cc:296
@@ -3991,7 +3987,7 @@ msgid "About"
 msgstr "Hakkında"
 
 #: ../plugins/actions/about/about.se-plugin.in.h:2
-msgid "Displays the application's information."
+msgid "Displays information about the application."
 msgstr "Uygulamanın bilgisini gösterir."
 
 #: ../plugins/actions/adjusttime/adjusttime.se-plugin.in.h:1
