--- a/po/el.po
+++ b/po/el.po
@@ -374,7 +374,7 @@ msgid "_Combine"
 msgstr "_Συνδυασμός"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:44
-msgid "Merge the selected subtitles"
+msgid "Merge selected subtitles"
 msgstr "Συγχώνευση των επιλεγμένων υπότιτλων"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:135
@@ -641,10 +641,6 @@ msgstr "Δια_χωρισμός Εγγράφου"
 msgid "_Duplicate"
 msgstr "_Δημιουργία αντιγράφου"
 
-#: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:44
-msgid "Duplicate the selected subtitles"
-msgstr "Δημιουργία αντιγράφου των επιλεγμένων υπότιτλων"
-
 #: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:99
 msgid "Duplicate selected subtitles"
 msgstr "Δημιουργία αντιγράφου επιλεγμένων υπότιτλων"
@@ -654,7 +650,7 @@ msgid "_Edit Cell"
 msgstr "_Επεξεργασία Κελιού"
 
 #: ../plugins/actions/editcell/editcell.cc:44
-msgid "Start the editing of the focused cell"
+msgid "Start editing the focused cell"
 msgstr "Έναρξη επεξεργασίας του εστιασμένου κελιού"
 
 #: ../plugins/actions/editcell/editcell.cc:49
@@ -662,7 +658,7 @@ msgid "Edit _Next Cell"
 msgstr "Επεξεργασία _Επόμενου Κελιού"
 
 #: ../plugins/actions/editcell/editcell.cc:50
-msgid "Start the editing of the next cell"
+msgid "Start editing the next cell"
 msgstr "Έναρξη επεξεργασίας του επόμενου κελιού"
 
 #: ../plugins/actions/errorchecking/dialog-error-checking-preferences.ui.h:1
@@ -1259,7 +1255,7 @@ msgid "Insert _Before"
 msgstr "Εισαγωγή _Πριν"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:45
-msgid "Insert blank subtitle before the selected subtitle"
+msgid "Insert a blank subtitle before the first selected subtitle"
 msgstr "Εισαγωγή κενού υπότιτλου πριν από τον επιλεγμένο υπότιτλο"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:51
@@ -1267,7 +1263,7 @@ msgid "Insert _After"
 msgstr "Εισαγωγή _Μετά"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:52
-msgid "Insert blank subtitle after the selected subtitle"
+msgid "Insert a blank subtitle after the first selected subtitle"
 msgstr "Εισαγωγή κενού υπότιτλου μετά τον επιλεγμένο υπότιτλο"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:117
@@ -1281,7 +1277,7 @@ msgid "_Italic"
 msgstr "_Πλάγια"
 
 #: ../plugins/actions/italicize/italicize.cc:45
-msgid "Italicize the selected subtitles text"
+msgid "Italicize the text of the selected subtitles"
 msgstr "Μετατροπή του κειμένου των επιλεγμένων υπότιτλων σε πλάγιο"
 
 #: ../plugins/actions/italicize/italicize.cc:110
@@ -1939,7 +1935,7 @@ msgid "OpenGL"
 msgstr "OpenGL"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:44
-msgid "Delete the selected subtitles"
+msgid "Delete selected subtitles"
 msgstr "Διαγραφή των επιλεγμένων υπότιτλων"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:104
@@ -2284,7 +2280,7 @@ msgid "_Split"
 msgstr "_Διαχωρισμός"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:45
-msgid "Split the selected subtitles"
+msgid "Split selected subtitles"
 msgstr "Διαχωρισμός των επιλεγμένων υπότιτλων"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:94
