--- a/po/es.po
+++ b/po/es.po
@@ -386,7 +386,7 @@ msgid "_Combine"
 msgstr "_Combinar"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:44
-msgid "Merge the selected subtitles"
+msgid "Merge selected subtitles"
 msgstr "Unir los subtítulos seleccionados"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:135
@@ -645,10 +645,6 @@ msgstr "_Documento Siguiente"
 msgid "_Duplicate"
 msgstr "_Duplicar"
 
-#: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:44
-msgid "Duplicate the selected subtitles"
-msgstr "Duplicar los subtítulos seleccionados"
-
 #: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:99
 msgid "Duplicate selected subtitles"
 msgstr "Duplicar los subtítulos seleccionados"
@@ -658,7 +654,7 @@ msgid "_Edit Cell"
 msgstr "_Editar Celda"
 
 #: ../plugins/actions/editcell/editcell.cc:44
-msgid "Start the editing of the focused cell"
+msgid "Start editing the focused cell"
 msgstr "Iniciar la edición en la celda enfocada"
 
 #: ../plugins/actions/editcell/editcell.cc:49
@@ -666,7 +662,7 @@ msgid "Edit _Next Cell"
 msgstr "Editar la _Siguiente Celda"
 
 #: ../plugins/actions/editcell/editcell.cc:50
-msgid "Start the editing of the next cell"
+msgid "Start editing the next cell"
 msgstr "Iniciar la edición de la próxima celda"
 
 #: ../plugins/actions/errorchecking/dialog-error-checking-preferences.ui.h:1
@@ -1252,7 +1248,7 @@ msgid "Insert _Before"
 msgstr "Insertar _Antes"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:45
-msgid "Insert blank subtitle before the selected subtitle"
+msgid "Insert a blank subtitle before the first selected subtitle"
 msgstr "Insertar subtitulo en blanco antes del subtitulo seleccionado"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:51
@@ -1260,7 +1256,7 @@ msgid "Insert _After"
 msgstr "Insertar _Después"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:52
-msgid "Insert blank subtitle after the selected subtitle"
+msgid "Insert a blank subtitle after the first selected subtitle"
 msgstr "Insertar subtítulo en blanco luego del subtitulo seleccionado"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:117
@@ -1274,7 +1270,7 @@ msgid "_Italic"
 msgstr "_Itálica"
 
 #: ../plugins/actions/italicize/italicize.cc:45
-msgid "Italicize the selected subtitles text"
+msgid "Italicize the text of the selected subtitles"
 msgstr "Italizar el texto seleccionado de los subtítulos"
 
 #: ../plugins/actions/italicize/italicize.cc:110
@@ -1944,7 +1940,7 @@ msgid "OpenGL"
 msgstr "OpenGL"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:44
-msgid "Delete the selected subtitles"
+msgid "Delete selected subtitles"
 msgstr "Borrar subtítulos seleccionados"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:104
@@ -2285,7 +2281,7 @@ msgid "_Split"
 msgstr "_Dividir"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:45
-msgid "Split the selected subtitles"
+msgid "Split selected subtitles"
 msgstr "Partir los subtítulos seleccionados"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:94
