--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -369,7 +369,7 @@ msgid "_Combine"
 msgstr "_Unir"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:44
-msgid "Merge the selected subtitles"
+msgid "Merge selected subtitles"
 msgstr "Mescla as legendas selecionadas"
 
 #: ../plugins/actions/combinesubtitles/combinesubtitles.cc:135
@@ -629,10 +629,6 @@ msgstr "P_róximo documento"
 msgid "_Duplicate"
 msgstr "_Duplicar"
 
-#: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:44
-msgid "Duplicate the selected subtitles"
-msgstr "Duplica as legendas selecionadas"
-
 #: ../plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:99
 msgid "Duplicate selected subtitles"
 msgstr "Duplicação das legendas selecionadas"
@@ -642,7 +638,7 @@ msgid "_Edit Cell"
 msgstr "_Editar célula"
 
 #: ../plugins/actions/editcell/editcell.cc:44
-msgid "Start the editing of the focused cell"
+msgid "Start editing the focused cell"
 msgstr "Inicia a edição da célula em foco"
 
 #: ../plugins/actions/editcell/editcell.cc:49
@@ -650,7 +646,7 @@ msgid "Edit _Next Cell"
 msgstr "Editar pró_xima célula"
 
 #: ../plugins/actions/editcell/editcell.cc:50
-msgid "Start the editing of the next cell"
+msgid "Start editing the next cell"
 msgstr "Inicia a edição da próxima célula"
 
 #: ../plugins/actions/errorchecking/dialog-error-checking-preferences.ui.h:1
@@ -1229,7 +1225,7 @@ msgid "Insert _Before"
 msgstr "Inserir an_tes"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:45
-msgid "Insert blank subtitle before the selected subtitle"
+msgid "Insert a blank subtitle before the first selected subtitle"
 msgstr "Insere uma legenda em branco antes da legenda selecionada"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:51
@@ -1237,7 +1233,7 @@ msgid "Insert _After"
 msgstr "Inserir _depois"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:52
-msgid "Insert blank subtitle after the selected subtitle"
+msgid "Insert a blank subtitle after the first selected subtitle"
 msgstr "Insere uma legenda em branco depois da legenda selecionada"
 
 #: ../plugins/actions/insertsubtitle/insertsubtitle.cc:117
@@ -1251,7 +1247,7 @@ msgid "_Italic"
 msgstr "_Itálico"
 
 #: ../plugins/actions/italicize/italicize.cc:45
-msgid "Italicize the selected subtitles text"
+msgid "Italicize the text of the selected subtitles"
 msgstr "Altera para itálico o texto das legendas selecionadas"
 
 #: ../plugins/actions/italicize/italicize.cc:110
@@ -1917,7 +1913,7 @@ msgid "OpenGL"
 msgstr "OpenGL"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:44
-msgid "Delete the selected subtitles"
+msgid "Delete selected subtitles"
 msgstr "Exclui as legendas selecionadas"
 
 #: ../plugins/actions/removesubtitle/removesubtitle.cc:104
@@ -2258,7 +2254,7 @@ msgid "_Split"
 msgstr "_Dividir"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:45
-msgid "Split the selected subtitles"
+msgid "Split selected subtitles"
 msgstr "Divide as legendas selecionadas"
 
 #: ../plugins/actions/splitsubtitle/splitsubtitle.cc:94
